frontend: Fix pagination issues
- The "Edellinen" button was partially unclickable due to overlapping element
- The "Seuraava" button Y position was not the same as "Edellinen"

--- a/frontend/src/styles/layout/_page.sass
+++ b/frontend/src/styles/layout/_page.sass
@@ -288,13 +288,16 @@ header
       display: none
     > ul
       @include flex-grow(1)
-      min-width: 760px
+      min-width: 416px
+      margin-left: 142px
+      margin-right: 142px
       li
         min-width: 40px
     [type="button"]
       border-radius: 40px
       width: 142px
       position: absolute
+      top: -8px
       div
         transition: all 350ms ease-out
       &:hover
